--- a/clientside/src/components/css/contact.css
+++ b/clientside/src/components/css/contact.css
@@ -4,15 +4,16 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: black;
   }
   
   /* Wrapper for the contact list */
   .contact-list-wrapper {
-    background-color: white;
-    border: 1px solid #008080;
+    background-color: rgb(61, 60, 60);
+    /* border: 1px solid #e8ebeb; */
     padding: 1.25rem;
     border-radius: 0.5rem;
-    width: 100%;
+    width: 500px;
     max-width: 768px; /* equivalent to max-w-3xl */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
@@ -28,7 +29,7 @@
   }
   
   .search-input {
-    width: 100%;
+    width: 100px;
     padding: 0.75rem;
     padding-left: 2.5rem;
     border: 1px solid #008080;
@@ -51,7 +52,7 @@
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    padding-left: 0.75rem;
+    padding-left: 2px;
     color: #808080;
   }
   
@@ -65,36 +66,40 @@
   /* Contact item style */
   .contact-item {
     display: flex;
-    align-items: center;
-    padding: 1rem;
+    /* align-items: center; */
+    width: 450px;
+    height: 50px;
     margin-bottom: 1.5rem;
-    border: 1px solid #008080;
-    border-radius: 0.5rem;
+    /* border: 1px solid #878b8b; */
+    border-radius: 2px;
     cursor: pointer;
     transition: all 0.3s ease;
   }
   
   .contact-item:hover {
-    background-color: #008080;
+    background-color:whitesmoke;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   .contact-item img {
-    width: 3.5rem;
-    height: 3.5rem;
-    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
     margin-right: 1.5rem;
   }
   
   .contact-item p {
     font-size: 1.125rem;
-    color: #4a4a4a;
+    color: #f7f3f3;
     font-weight: 500;
     flex: 1;
   }
-  
+  .lcn{
+    text-decoration: none;
+  }
+ 
   /* Hover state for the contact item */
   .contact-item:hover p {
-    color: white;
+    color: rgb(5, 4, 4);
   }
   
