--- a/clientside/src/components/css/contact.css
+++ b/clientside/src/components/css/contact.css
@@ -29,10 +29,10 @@
   }
   
   .search-input {
-    width: 100px;
-    padding: 0.75rem;
+    width: 450px;
+    height: 30px;
     padding-left: 2.5rem;
-    border: 1px solid #008080;
+    border: 1px solid #1b1b1b;
     border-radius: 0.5rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color: white;
@@ -42,8 +42,8 @@
   }
   
   .search-input:focus {
-    border-color: #008080;
-    box-shadow: 0 0 0 2px rgba(0, 128, 128, 0.5);
+    border-color: #0f0f0f;
+    box-shadow: 0 0 0 2px rgba(35, 36, 36, 0.5);
   }
   
   /* Search Icon style */
@@ -54,6 +54,7 @@
     transform: translateY(-50%);
     padding-left: 2px;
     color: #808080;
+    margin-top: -5px;
   }
   
   /* Contact list container */
