--- a/clientside/src/components/css/message.css
+++ b/clientside/src/components/css/message.css
@@ -217,3 +217,17 @@ body {
 .options-menu button:hover {
   background-color: #f0f0f0;
 }
+
+
+.status .tick {
+  margin-left: 5px;
+  color: #999;
+}
+
+.status .tick.sent {
+  color: #00BFFF; /* Sent tick color */
+}
+
+.status .tick.delivered {
+  color: #c7cacc; /* Delivered tick color */
+}
